# search-py

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: release.yaml  test.yaml
tests/: __init__.py  conftest.py  test_collection.py  test_index.py
tests/asyncio/: test_collection.py  test_index.py
upstash_search/: __init__.py  collection.py  http.py  index.py  paths.py  search.py  types.py  utils.py
upstash_search/asyncio/: collection.py  http.py  index.py  search.py
